[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/KiwiMaru80.tres" type="DynamicFont" id=1]
[ext_resource path="res://video/loader.ogv" type="VideoStream" id=2]
[ext_resource path="res://scenes/errors/networkerror.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/start/start.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "fadeout"
length = 0.51
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("VideoPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.51 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("RichTextLabel")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.51 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "" ],
"method": "set_text"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "startfadein"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[node name="start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.682
margin_top = -114.841
margin_right = 148.318
margin_bottom = 76.1594
custom_fonts/bold_font = ExtResource( 1 )
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=1.2][b]Knåker[/b][/wave]"
text = "Knåker"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="ColorRect"]
margin_left = 470.962
margin_top = 311.335
margin_right = 547.962
margin_bottom = 369.335
stream = ExtResource( 2 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect/VideoPlayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 69.0
margin_top = -9.0
margin_right = 18.0
margin_bottom = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="ColorRect/VideoPlayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -9.0
margin_top = 46.0
margin_right = 20.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
anims/fadeout = SubResource( 1 )

[node name="Timer" type="Timer" parent="ColorRect"]
wait_time = 2.0
one_shot = true

[node name="MoveTimer" type="Timer" parent="ColorRect"]
wait_time = 0.5
one_shot = true

[node name="RemoveTimer" type="Timer" parent="ColorRect"]
one_shot = true

[node name="neterror" parent="." instance=ExtResource( 3 )]

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "startfadein"
anims/startfadein = SubResource( 2 )
[connection signal="finished" from="ColorRect/VideoPlayer" to="ColorRect" method="restart_loader_video"]
[connection signal="timeout" from="ColorRect/Timer" to="ColorRect" method="_on_Timer_timeout"]
[connection signal="timeout" from="ColorRect/MoveTimer" to="ColorRect" method="move_timer_done"]
[connection signal="timeout" from="ColorRect/RemoveTimer" to="ColorRect" method="remove_old_scenes"]
